// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multiselect (isCI = false) > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > can cancel 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "■  foo
│",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > can render option hints 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0 (Hint 0)
│  ◻ opt1
└
",
  "[999D[5A",
  "[2B",
  "[2K[G",
  "│  ◼ opt0 (Hint 0)",
  "[3B",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt0",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > can set cursorAt to preselect an option 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "[999D[5A",
  "[3B",
  "[2K[G",
  "│  ◼ opt1",
  "[2B",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt1",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > can set custom labels 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ Option 0
│  ◻ Option 1
└
",
  "[999D[5A",
  "[2B",
  "[2K[G",
  "│  ◼ Option 0",
  "[3B",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  Option 0",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > can set initial values 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◼ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt1",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > can submit without selection when required = false 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  none",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > maxItems renders a sliding window 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "[999D[9A",
  "[2B",
  "[J",
  "│  ...
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ...
└
",
  "[999D[9A",
  "[3B",
  "[J",
  "│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ...
└
",
  "[999D[9A",
  "[3B",
  "[J",
  "│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ◻ opt7
│  ...
└
",
  "[999D[9A",
  "[5B",
  "[2K[G",
  "│  ◼ opt6",
  "[4B",
  "[999D[9A",
  "[1B",
  "[J",
  "◇  foo
│  opt6",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > renders message 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "[999D[5A",
  "[2B",
  "[2K[G",
  "│  ◼ opt0",
  "[3B",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt0",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > renders multiple cancelled values 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
└
",
  "[999D[6A",
  "[2B",
  "[2K[G",
  "│  ◼ opt0",
  "[4B",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  ◼ opt1",
  "[3B",
  "[999D[6A",
  "[1B",
  "[J",
  "■  foo
│  opt0, opt1
│",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > renders multiple selected options 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
└
",
  "[999D[6A",
  "[2B",
  "[2K[G",
  "│  ◼ opt0",
  "[4B",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  ◼ opt1",
  "[3B",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  opt0, opt1",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > renders validation errors 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "▲  foo
│  ◻ opt0
│  ◻ opt1
└  Please select at least one option.
   Press  space  to select,  enter  to submit
",
  "[999D[6A",
  "[1B",
  "[J",
  "◆  foo
│  ◼ opt0
│  ◻ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt0",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > shows hints for all selected options 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◼ opt0 (Hint 0)
│  ◼ opt1 (Hint 1)
│  ◻ opt2
└
",
  "[999D[6A",
  "[4B",
  "[2K[G",
  "│  ◻ opt2 (Hint 2)",
  "[2B",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  opt0, opt1",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > sliding window loops downwards 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "[999D[9A",
  "[2B",
  "[J",
  "│  ...
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ...
└
",
  "[999D[9A",
  "[3B",
  "[J",
  "│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ...
└
",
  "[999D[9A",
  "[3B",
  "[J",
  "│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ◻ opt7
│  ...
└
",
  "[999D[9A",
  "[3B",
  "[J",
  "│  ◻ opt5
│  ◻ opt6
│  ◻ opt7
│  ◻ opt8
│  ...
└
",
  "[999D[9A",
  "[3B",
  "[J",
  "│  ◻ opt6
│  ◻ opt7
│  ◻ opt8
│  ◻ opt9
│  ...
└
",
  "[999D[9A",
  "[3B",
  "[J",
  "│  ◻ opt7
│  ◻ opt8
│  ◻ opt9
│  ◻ opt10
│  ◻ opt11
└
",
  "[999D[9A",
  "[2B",
  "[J",
  "│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "[999D[9A",
  "[2B",
  "[2K[G",
  "│  ◼ opt0",
  "[7B",
  "[999D[9A",
  "[1B",
  "[J",
  "◇  foo
│  opt0",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = false) > sliding window loops upwards 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "[999D[9A",
  "[2B",
  "[J",
  "│  ...
│  ◻ opt7
│  ◻ opt8
│  ◻ opt9
│  ◻ opt10
│  ◻ opt11
└
",
  "[999D[9A",
  "[7B",
  "[2K[G",
  "│  ◼ opt11",
  "[2B",
  "[999D[9A",
  "[1B",
  "[J",
  "◇  foo
│  opt11",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > can cancel 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "■  foo
│",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > can render option hints 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0 (Hint 0)
│  ◻ opt1
└
",
  "[999D[5A",
  "[2B",
  "[2K[G",
  "│  ◼ opt0 (Hint 0)",
  "[3B",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt0",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > can set cursorAt to preselect an option 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "[999D[5A",
  "[3B",
  "[2K[G",
  "│  ◼ opt1",
  "[2B",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt1",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > can set custom labels 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ Option 0
│  ◻ Option 1
└
",
  "[999D[5A",
  "[2B",
  "[2K[G",
  "│  ◼ Option 0",
  "[3B",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  Option 0",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > can set initial values 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◼ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt1",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > can submit without selection when required = false 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  none",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > maxItems renders a sliding window 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "[999D[9A",
  "[2B",
  "[J",
  "│  ...
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ...
└
",
  "[999D[9A",
  "[3B",
  "[J",
  "│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ...
└
",
  "[999D[9A",
  "[3B",
  "[J",
  "│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ◻ opt7
│  ...
└
",
  "[999D[9A",
  "[5B",
  "[2K[G",
  "│  ◼ opt6",
  "[4B",
  "[999D[9A",
  "[1B",
  "[J",
  "◇  foo
│  opt6",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > renders message 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "[999D[5A",
  "[2B",
  "[2K[G",
  "│  ◼ opt0",
  "[3B",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt0",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > renders multiple cancelled values 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
└
",
  "[999D[6A",
  "[2B",
  "[2K[G",
  "│  ◼ opt0",
  "[4B",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  ◼ opt1",
  "[3B",
  "[999D[6A",
  "[1B",
  "[J",
  "■  foo
│  opt0, opt1
│",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > renders multiple selected options 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
└
",
  "[999D[6A",
  "[2B",
  "[2K[G",
  "│  ◼ opt0",
  "[4B",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  ◼ opt1",
  "[3B",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  opt0, opt1",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > renders validation errors 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "▲  foo
│  ◻ opt0
│  ◻ opt1
└  Please select at least one option.
   Press  space  to select,  enter  to submit
",
  "[999D[6A",
  "[1B",
  "[J",
  "◆  foo
│  ◼ opt0
│  ◻ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt0",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > shows hints for all selected options 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◼ opt0 (Hint 0)
│  ◼ opt1 (Hint 1)
│  ◻ opt2
└
",
  "[999D[6A",
  "[4B",
  "[2K[G",
  "│  ◻ opt2 (Hint 2)",
  "[2B",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  opt0, opt1",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > sliding window loops downwards 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "[999D[9A",
  "[2B",
  "[J",
  "│  ...
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ...
└
",
  "[999D[9A",
  "[3B",
  "[J",
  "│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ...
└
",
  "[999D[9A",
  "[3B",
  "[J",
  "│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ◻ opt7
│  ...
└
",
  "[999D[9A",
  "[3B",
  "[J",
  "│  ◻ opt5
│  ◻ opt6
│  ◻ opt7
│  ◻ opt8
│  ...
└
",
  "[999D[9A",
  "[3B",
  "[J",
  "│  ◻ opt6
│  ◻ opt7
│  ◻ opt8
│  ◻ opt9
│  ...
└
",
  "[999D[9A",
  "[3B",
  "[J",
  "│  ◻ opt7
│  ◻ opt8
│  ◻ opt9
│  ◻ opt10
│  ◻ opt11
└
",
  "[999D[9A",
  "[2B",
  "[J",
  "│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "[999D[9A",
  "[2B",
  "[2K[G",
  "│  ◼ opt0",
  "[7B",
  "[999D[9A",
  "[1B",
  "[J",
  "◇  foo
│  opt0",
  "
",
  "[?25h",
]
`;

exports[`multiselect (isCI = true) > sliding window loops upwards 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "[999D[9A",
  "[2B",
  "[J",
  "│  ...
│  ◻ opt7
│  ◻ opt8
│  ◻ opt9
│  ◻ opt10
│  ◻ opt11
└
",
  "[999D[9A",
  "[7B",
  "[2K[G",
  "│  ◼ opt11",
  "[2B",
  "[999D[9A",
  "[1B",
  "[J",
  "◇  foo
│  opt11",
  "
",
  "[?25h",
]
`;
